# Fastener

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.agent/: CONTEXT.md
.agent/workflows/: dev.md
docs/: AI_CONTEXT.md  API.md  ARCHITECTURE.md  FUTURE_FEATURES.md  GETTING_STARTED.md  README.md  SIGNATURES.json  THEMING.md  WIDGETS.md
examples/demo/: main.cpp
examples/multi_window/: main.cpp
include/fastener/: fastener.h
include/fastener/core/: constants.h  context.h  i18n.h  input.h  log.h  profiler.h  types.h
include/fastener/graphics/: IDrawList.h  draw_list.h  font.h  renderer.h  svg.h  texture.h
include/fastener/platform/: cursor_utils.h  platform_interface.h  window.h  window_manager.h
include/fastener/ui/: dock_builder.h  dock_context.h  dock_node.h  drag_drop.h  flex_layout.h  layout.h  style.h  theme.h  widget.h  widget_scope.h  widget_utils.h
include/fastener/widgets/: badge.h  breadcrumb.h  button.h  card.h  chart.h  checkbox.h  collapsing_header.h  color_picker.h  combo_box.h  command_palette.h  date_picker.h  dock_preview.h  dock_space.h  dockable_window.h  image.h  input_number.h  label.h  listbox.h  menu.h  modal.h  panel.h  pill.h  profiler_widget.h  progress_bar.h  radio_button.h  rich_text_preview.h  scroll_area.h  selectable.h  separator.h  slider.h  spinner.h  splitter.h  status_bar.h  svg_image.h  tab_control.h  table.h  text_area.h  text_editor.h  text_input.h  time_picker.h  (+4 more)
src/core/: color.cpp  context.cpp  i18n.cpp  input.cpp  log.cpp  profiler.cpp  types.cpp
src/graphics/: draw_list.cpp  font.cpp  renderer.cpp  svg.cpp  texture.cpp
src/platform/: window_manager.cpp
src/ui/: dock_builder.cpp  dock_context.cpp  dock_node.cpp  drag_drop.cpp  flex_layout.cpp  layout.cpp  widget.cpp
src/widgets/: badge.cpp  breadcrumb.cpp  button.cpp  card.cpp  chart.cpp  checkbox.cpp  collapsing_header.cpp  color_picker.cpp  combo_box.cpp  command_palette.cpp  date_picker.cpp  dock_preview.cpp  dock_space.cpp  dockable_window.cpp  image.cpp  input_number.cpp  label.cpp  listbox.cpp  menu.cpp  modal.cpp  panel.cpp  pill.cpp  profiler_widget.cpp  progress_bar.cpp  radio_button.cpp  rich_text_preview.cpp  scroll_area.cpp  selectable.cpp  separator.cpp  slider.cpp  spinner.cpp  splitter.cpp  status_bar.cpp  svg_image.cpp  tab_control.cpp  table.cpp  text_area.cpp  text_editor.cpp  text_input.cpp  time_picker.cpp  (+4 more)
tests/: MockDrawList.h  TestContext.h  test_chart_widget.cpp  test_context_di.cpp  test_date_time.cpp  test_docking.cpp  test_i18n.cpp  test_input.cpp  test_layout.cpp  test_pill_widget.cpp  test_rich_text_preview.cpp  test_svg.cpp  test_svg_widget.cpp  test_text_area.cpp  test_toast.cpp  test_types.cpp  test_widget_rendering.cpp  test_widget_utils.cpp
(+4 files in other folders)
